Closed Bug 462071 Opened 16 years ago Closed 16 years ago

TM: "Assertion failure: !ti->stackTypeMap.matches(ti_other->stackTypeMap)" #2

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: dvander)

Details

(Keywords: assertion, testcase)

Attachments

(1 file, 1 obsolete file)

I added some stuff to the fuzzer to make it generate type-unstable arrays and iterate through them.  Very quickly, it found this:

for each (let i in [{}, 0, 0, {}, 0, {}, 0]) { }

Assertion failure: !ti->stackTypeMap.matches(ti_other->stackTypeMap), at jstracer.cpp:2727

Testing with rev ab3538891c4, so I have the patch from bug 461945.
Attached patch proposed fix (obsolete) — Splinter Review
tell oracle about doubles when we generate an unstable exit.
Assignee: general → danderson
Status: NEW → ASSIGNED
Attachment #345391 - Flags: review?(gal)
Attachment #345391 - Flags: review?(gal) → review+
Attached patch proposed fix, v2Splinter Review
better fix, deterministic.  speculate all unstable doubles as unpromotable.
Attachment #345391 - Attachment is obsolete: true
Attachment #345393 - Flags: review?(gal)
Attachment #345393 - Flags: review?(gal) → review+
Pushed fix as changeset: http://hg.mozilla.org/tracemonkey/rev/d8d9e7956897
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
http://hg.mozilla.org/mozilla-central/rev/37b3fdbb0f07
/cvsroot/mozilla/js/tests/js1_7/regress/regress-462071.js,v  <--  regress-462071.js
initial revision: 1.1
Flags: in-testsuite+
Flags: in-litmus-
Summary: "Assertion failure: !ti->stackTypeMap.matches(ti_other->stackTypeMap)" #2 → TM: "Assertion failure: !ti->stackTypeMap.matches(ti_other->stackTypeMap)" #2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: