Mark any double slot in an unstable exit as undemotable (bug 462071, r=gal).